--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -10,3 +10,6 @@
 .content__default a:-webkit-any-link {
     text-decoration: underline;
 }
+div[class*="language-"] .highlight-lines .highlighted {
+    background-color: #0c3d3f;
+}
