confetti-framework/docs#13 improve first time reader exp

--- a/.vuepress/styles/index.styl
+++ b/.vuepress/styles/index.styl
@@ -8,7 +8,7 @@
   max-width 150px!important
 
 .content__default a:-webkit-any-link {
-    text-decoration: underline;
+    /*text-decoration: underline;*/
 }
 div[class*="language-"] .highlight-lines .highlighted {
     background-color: #0c3d3f;
