confetti-framework/docs#13 improve first time reader exp

--- a/.vuepress/styles/index.styl
+++ b/.vuepress/styles/index.styl
@@ -13,3 +13,15 @@
 div[class*="language-"] .highlight-lines .highlighted {
     background-color: #0c3d3f;
 }
+
+div[class*="language-"] pre:hover .code-copy {
+    opacity: 0.5;
+    top: 32px;
+    right: 8px;
+    width: 20px;
+    height: 29px;
+}
+
+div[class*="language-"] pre:hover .code-copy:active {
+    opacity: 1;
+}
