confetti-framework/docs#13 improve first time reader exp
remove own business logic from example

--- a/.vuepress/styles/index.styl
+++ b/.vuepress/styles/index.styl
@@ -8,7 +8,7 @@
   max-width 150px!important
 
 .content__default a:-webkit-any-link {
-    /*text-decoration: underline;*/
+    text-decoration: underline;
 }
 div[class*="language-"] .highlight-lines .highlighted {
     background-color: #0c3d3f;
@@ -24,4 +24,9 @@ div[class*="language-"] pre:hover .code-copy {
 
 div[class*="language-"] pre:hover .code-copy:active {
     opacity: 1;
+}
+
+.profile {
+  border-radius: 50%;
+  width: 30px;
 }
