confetti-framework/confetti#105 implement interaction with command

--- a/.vuepress/styles/index.styl
+++ b/.vuepress/styles/index.styl
@@ -10,6 +10,13 @@
 .content__default a:-webkit-any-link {
     text-decoration: underline;
 }
+svg.icon.outbound {
+    display: none;
+}
+a>span {
+    display: none;
+}
+
 div[class*="language-"] .highlight-lines .highlighted {
     background-color: #0c3d3f;
 }
