--- a/.vuepress/styles/index.styl
+++ b/.vuepress/styles/index.styl
@@ -37,3 +37,8 @@ div[class*="language-"] pre:hover .code-copy:active {
   border-radius: 50%;
   width: 30px;
 }
+
+body, html {
+    margin: 0;
+    min-height: 100%;
+}
