--- a/.vuepress/styles/index.styl
+++ b/.vuepress/styles/index.styl
@@ -40,5 +40,5 @@ div[class*="language-"] pre:hover .code-copy:active {
 
 body, html {
     margin: 0;
-    min-height: 100%;
+    min-height: 100vh;
 }
